[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.14.0"
argon2 = "0.5.3"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["error", "display", "from", "from_str", "try_from", "deref", "deref_mut"] }
jsonwebtoken = "10.4.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate", "macros", "json"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.24.0", features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
